setup varialbe-function-mixin-fonts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="./sass/vendors/bootstrap.min.css">
     <!-- FONT AWESOME LIBRARY -->
     <link rel="stylesheet" href="./sass/vendors/all.css">
-    
+    <!-- GOOGLE FONT ROBOTO -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+    <!-- LINK MAIN CSS -->
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     
