--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
-    
+    <button class="button-1">Add to cart</button>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./sass/vendors/jquery-3.3.1.slim.min.js"></script>
