add placeholder.scss, add course-item

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./sass/vendors/bootstrap.min.css">
     <!-- FONT AWESOME LIBRARY -->
     <link rel="stylesheet" href="./sass/vendors/all.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- GOOGLE FONT ROBOTO -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <!-- LINK MAIN CSS -->
@@ -17,6 +18,32 @@
   </head>
   <body>
     <button class="button-1">Add to cart</button>
+    <div class="course-item">
+      <img src="./img/567828_67d0.jpg" alt="">
+      <div class="course-item__bottom">
+        <div class="course-item__title">
+          <div >
+            <p>Complete Python Bootcamp: Go from zero to hero in Python 3</p> 
+          </div>
+          <span>Jose Portilla</span>
+        </div> 
+        <div class="course-item__rated">
+          <div class="course-item__star">
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half-o"></i>
+          </div>
+          <h4 class="d-inline">4.4</h4>
+          <span>(67,712)</span>
+        </div>
+        <div class="course-item__prices">
+          <span>$194.99</span>
+          <span>$12.99</span>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./sass/vendors/jquery-3.3.1.slim.min.js"></script>
