fix text-overflow course-item

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="course-item__bottom">
         <div class="course-item__title">
           <div >
-            <p>Complete Python Bootcamp: Go from zero to hero in Python 3</p> 
+            <p>Complete Python <br> Bootcamp: Go from zero to hero in Python 3</p> 
           </div>
           <span>Jose Portilla</span>
         </div> 
