--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         </div>
       </div>
     </div>
+    <a class="text-decoration-none"href="">
+      <div class="panel">
+      <i class="fa fa-code"></i>
+      <span>Development</span>
+    </div>
+  </a>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./sass/vendors/jquery-3.3.1.slim.min.js"></script>
