--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./sass/vendors/bootstrap.min.css">
     <!-- FONT AWESOME LIBRARY -->
-    <link rel="stylesheet" href="./sass/vendors/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- GOOGLE FONT ROBOTO -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
@@ -50,7 +50,65 @@
       <span>Development</span>
     </div>
   </a>
+
+  <div class="value-pros d-flex flex-column align-items-center">
+    <img src="./img/learn_from_experts.svg" alt="">
+    <h4>Learn from industry experts</h4>
+    <p>Select from top instructors around the world</p>
+  </div>
     
+  <div class="review-card">
+    <div class="review-card__top">
+      <img src="./img/8872940_27b4_3.jpg" alt="">
+      <span>Borivoje</span>
+    </div>
+    <div class="review-card__bottom">
+      Udemy is a life saver. I don't have the time or money for a college education. My goal is to become a freelance web developer, and thanks to Udemy, I'm really close.
+    </div>
+  </div>
+
+  <button class="btn-lang position-relative m-5">
+    <i class="fas fa-globe-americas"></i>
+    <span>English</span>
+    <i class="fa fa-angle-up"></i>
+    <div class="lang-select position-absolute list-unstyled">
+      <a href="" class="text-decoration-none">English</a>
+      <a href="" class="text-decoration-none">Deutsch</a>
+      <a href="" class="text-decoration-none">Español</a>
+      <a href="" class="text-decoration-none">Français</a>
+      <a href="" class="text-decoration-none">Bahasa Indonesia</a>
+      <a href="" class="text-decoration-none">Italiano</a>
+      <a href="" class="text-decoration-none">日本語</a>
+      <a href="" class="text-decoration-none">한국어</a>
+      <a href="" class="text-decoration-none">Nederlands</a>
+      <a href="" class="text-decoration-none">Polski</a>
+      <a href="" class="text-decoration-none">Português</a>
+      <a href="" class="text-decoration-none">Română</a>
+      <a href="" class="text-decoration-none">Русский</a>
+      <a href="" class="text-decoration-none">ภาษาไทย</a>
+      <a href="" class="text-decoration-none">Türkçe</a>
+      <a href="" class="text-decoration-none">中文(简体)</a>
+      <a href="" class="text-decoration-none">中文(繁體)</a>
+      <!-- <li><a href="" class="text-decoration-none">English</a></li>
+      <li><a href="" class="text-decoration-none">Deutsch</a></li>
+      <li><a href="" class="text-decoration-none">Español</a></li>
+      <li><a href="" class="text-decoration-none">Français</a></li>
+      <li><a href="" class="text-decoration-none">Bahasa Indonesia</a></li>
+      <li><a href="" class="text-decoration-none">Italiano</a></li>
+      <li><a href="" class="text-decoration-none">日本語</a></li>
+      <li><a href="" class="text-decoration-none">한국어</a></li>
+      <li><a href="" class="text-decoration-none">Nederlands</a></li>
+      <li><a href="" class="text-decoration-none">Polski</a></li>
+      <li><a href="" class="text-decoration-none">Português</a></li>
+      <li><a href="" class="text-decoration-none">Română</a></li>
+      <li><a href="" class="text-decoration-none">Русский</a></li>
+      <li><a href="" class="text-decoration-none">ภาษาไทย</a></li>
+      <li><a href="" class="text-decoration-none">Türkçe</a></li>
+      <li><a href="" class="text-decoration-none">中文(简体)</a></li>
+      <li><a href="" class="text-decoration-none">中文(繁體)</a></li> -->
+    </div>
+  </button>
+  <div class="mb-5"></div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./sass/vendors/jquery-3.3.1.slim.min.js"></script>
