--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <body>
   <header class="header container-fluid">
     <div class="header__linear-gradient"></div>
-    <div class="header__content container">
+    <div class="header__content">
       <div class="row align-items-center">
-        <div class="d-flex col-md-6">
+        <div class="d-flex col-10 col-md-11 col-lg-6">
           <a class="navbar-brand header__logo" href="#"><img src="./img/logo-coral.svg" alt="" srcset=""></a>
-          <a href="#" class="header__categories text-decoration-none d-flex align-items-center">
+          <a href="#" class="header__categories text-decoration-none d-none d-sm-flex align-items-center">
             <i class="fa fa-th"></i>
             <span>Categories</span>
           </a>
@@ -39,10 +39,10 @@
             </div>
           </div>
         </div>
-        <div class="d-flex col-md-6">
+        <div class="col-2 col-md-1 col-lg-6">
           <div class="row align-items-center">
-            <div class="col-md-6">
-              <div class="header__info d-flex">
+            <div class="d-none d-lg-block col-md-6">
+              <div class="header__info  d-flex">
                 <a href="#" class="header__categories text-decoration-none ">Udemy for business
                 </a>
                 <a href="#" class="header__categories text-decoration-none ">
@@ -50,11 +50,11 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-6 d-flex justify-content-between">
+            <div class="col-md-12 col-lg-6 d-flex justify-content-between">
               <div class="header__cart"><a class="text-decoration-none " href="#">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
               </a></div>
-              <div class="header__buttons">
+              <div class="header__buttons d-none d-lg-block">
                 <button class="button-1">Log in</button>
                 <button class="button-1">Sign Up</button>
               </div>
@@ -67,7 +67,7 @@
   </header>
   <seciton class="carousel fluid-container">
     <div class="carousel__content container">
-      
+
     </div>
   </seciton>
   <button class="button-1">Add to cart</button>
