fix responsive header and add file carousel

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-  <header class="header container-fluid">
+  <header class="header">
     <div class="header__linear-gradient"></div>
     <div class="header__content">
       <div class="row align-items-center">
-        <div class="d-flex col-10 col-md-11 col-lg-6">
+        <div class="d-flex col-9 col-sm-10 col-lg-6">
           <a class="navbar-brand header__logo" href="#"><img src="./img/logo-coral.svg" alt="" srcset=""></a>
           <a href="#" class="header__categories text-decoration-none d-none d-sm-flex align-items-center">
             <i class="fa fa-th"></i>
@@ -39,7 +39,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 col-md-1 col-lg-6">
+        <div class="col-3 col-sm-2 col-lg-6">
           <div class="row align-items-center">
             <div class="d-none d-lg-block col-md-6">
               <div class="header__info  d-flex">
@@ -50,7 +50,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-12 col-lg-6 d-flex justify-content-between">
+            <div class="col-md-12 col-lg-6 d-flex justify-content-between justify-content-lg-center">
               <div class="header__cart"><a class="text-decoration-none " href="#">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
               </a></div>
@@ -66,9 +66,9 @@
     </div>
   </header>
   <seciton class="carousel fluid-container">
-    <div class="carousel__content container">
+  
 
-    </div>
+
   </seciton>
   <button class="button-1">Add to cart</button>
   <div class="course-item">
