finish section viewing

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </nav>
           <div class="tab-content new-change__content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-business" role="tabpanel" aria-labelledby="nav-business-tab">
-              <div class="owl-carousel owl-theme position-relative">
+              <div class="owl-one owl-carousel owl-theme position-relative" id="owl-one">
                 <div class="course-item item">
                   <img src="./img/bus-1.jpg" alt="">
                   <div class="course-item__bottom">
@@ -220,7 +220,7 @@
             </div>
             </div>
             <div class="tab-pane fade" id="nav-design" role="tabpanel" aria-labelledby="nav-design-tab">
-              <div class="owl-carousel owl-theme">
+              <div class="owl-one owl-carousel owl-theme position-relative" id="owl-one">
                 <div class="course-item item">
                   <img src="./img/bus-1.jpg" alt="">
                   <div class="course-item__bottom">
@@ -328,7 +328,7 @@
             </div>
             </div>
             <div class="tab-pane fade" id="nav-photography" role="tabpanel" aria-labelledby="nav-photography-tab">
-              <div class="owl-carousel owl-theme">
+              <div class="owl-one owl-carousel owl-theme position-relative" id="owl-one">
                 <div class="course-item item">
                   <img src="./img/bus-1.jpg" alt="">
                   <div class="course-item__bottom">
@@ -436,7 +436,7 @@
             </div>
             </div>
             <div class="tab-pane fade" id="nav-development" role="tabpanel" aria-labelledby="nav-development-tab">
-              <div class="owl-carousel owl-theme">
+              <div class="owl-one owl-carousel owl-theme" id="owl-one">
                 <div class="course-item item">
                   <img src="./img/bus-1.jpg" alt="">
                   <div class="course-item__bottom">
@@ -544,7 +544,7 @@
             </div>
             </div>
             <div class="tab-pane fade" id="nav-marketing" role="tabpanel" aria-labelledby="nav-marketing-tab">
-              <div class="owl-carousel owl-theme">
+              <div class="owl-one owl-carousel owl-theme position-relative" id="owl-one">
                 <div class="course-item item">
                   <img src="./img/bus-1.jpg" alt="">
                   <div class="course-item__bottom">
@@ -652,7 +652,7 @@
             </div>
             </div>
             <div class="tab-pane fade" id="nav-it&software" role="tabpanel" aria-labelledby="nav-it&software-tab">
-              <div class="owl-carousel owl-theme">
+              <div class="owl-one owl-carousel owl-theme position-relative" id="owl-one">
                 <div class="course-item item">
                   <img src="./img/bus-1.jpg" alt="">
                   <div class="course-item__bottom">
@@ -760,7 +760,7 @@
             </div>
             </div>
             <div class="tab-pane fade" id="nav-personal-dev" role="tabpanel" aria-labelledby="nav-personal-tab">
-              <div class="owl-carousel owl-theme">
+              <div class="owl-one owl-carousel owl-theme position-relative" id="owl-one">
                 <div class="course-item item">
                   <img src="./img/bus-1.jpg" alt="">
                   <div class="course-item__bottom">
@@ -909,92 +909,222 @@
     </div>
   </section>
   
-  :`
-  <div></div>
-  <button class="button-1">Add to cart</button>
-  <div class="course-item">
-    <img src="./img/567828_67d0.jpg" alt="">
-    <div class="course-item__bottom">
-      <div class="course-item__title">
-        <div>
-          <p>Complete Python Bootcamp: Go from zero to hero in Python 3</p>
+  <section class="viewing">
+    <div class="viewing__content container">
+      <span>Students are viewing</span>
+      <div class="owl-two owl-carousel owl-theme mt-3" id="owl-two">
+        <div class="course-item item">
+          <img src="./img/bus-1.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>An Entire MBA in 1 Course:Award Winning Business School Prof</p>
+              </div>
+              <span>Chris Haroun</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.4</h4>
+              <span>(38,562)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$199.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
         </div>
-        <span>Jose Portilla</span>
-      </div>
-      <div class="course-item__rated">
-        <div class="course-item__star">
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star-half-o"></i>
+        <div class="course-item item">
+          <img src="./img/bus-2.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>The Complete SQL Bootcamp 2020: Go from Zero to Hero</p>
+              </div>
+              <span>Jose Portilla</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.7</h4>
+              <span>(67,970)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$194.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
         </div>
-        <h4 class="d-inline">4.4</h4>
-        <span>(67,712)</span>
-      </div>
-      <div class="course-item__prices">
-        <span>$194.99</span>
-        <span>$12.99</span>
-      </div>
+        <div class="course-item item">
+          <img src="./img/bus-3.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>The Complete Financial Analyst Course 2020</p>
+              </div>
+              <span>365 Careers</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.5</h4>
+              <span>(39,831)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$194.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
+        </div>
+        <div class="course-item item">
+          <img src="./img/bus-4.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>PMP Exam Prep Seminar - PMBOK Guide 6</p>
+              </div>
+              <span>Joseph Phillips</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.6</h4>
+              <span>(46,645)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$199.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
+        </div>
+        <div class="course-item item">
+          <img src="./img/bus-1.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>An Entire MBA in 1 Course:Award Winning Business School Prof</p>
+              </div>
+              <span>Chris Haroun</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.4</h4>
+              <span>(38,562)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$199.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
+        </div>
+        <div class="course-item item">
+          <img src="./img/bus-2.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>The Complete SQL Bootcamp 2020: Go from Zero to Hero</p>
+              </div>
+              <span>Jose Portilla</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.7</h4>
+              <span>(67,970)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$194.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
+        </div>
+        <div class="course-item item">
+          <img src="./img/bus-3.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>The Complete Financial Analyst Course 2020</p>
+              </div>
+              <span>365 Careers</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.5</h4>
+              <span>(39,831)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$194.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
+        </div>
+        <div class="course-item item">
+          <img src="./img/bus-4.jpg" alt="">
+          <div class="course-item__bottom">
+            <div class="course-item__title">
+              <div>
+                <p>PMP Exam Prep Seminar - PMBOK Guide 6</p>
+              </div>
+              <span>Joseph Phillips</span>
+            </div>
+            <div class="course-item__rated">
+              <div class="course-item__star">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+              </div>
+              <h4 class="d-inline">4.6</h4>
+              <span>(46,645)</span>
+            </div>
+            <div class="course-item__prices">
+              <span>$199.99</span>
+              <span>$12.99</span>
+            </div>
+          </div>
+        </div>
     </div>
-  </div>
-
-  <div class="m-5"></div>
-  <a class="text-decoration-none" href="">
-    <div class="panel">
-      <i class="fa fa-code"></i>
-      <span>Development</span>
     </div>
-  </a>
-
-  <div class="new-chanel__values d-flex flex-column align-items-center">
-    <img src="./img/learn_from_experts.svg" alt="">
-    <h4>Learn from industry experts</h4>
-    <p>Select from top instructors around the world</p>
-  </div>
-
-  <div class="review-card">
-    <div class="review-card__top">
-      <img src="./img/8872940_27b4_3.jpg" alt="">
-      <span>Borivoje</span>
-    </div>
-    <div class="review-card__bottom">
-      Udemy is a life saver. I don't have the time or money for a college education. My goal is to become a freelance
-      web developer, and thanks to Udemy, I'm really close.
-    </div>
-  </div>
-
-  <button class="btn-lang position-relative m-5">
-    <i class="fas fa-globe-americas"></i>
-    <span>English</span>
-    <i class="fa fa-angle-up"></i>
-    <div class="lang-select position-absolute list-unstyled">
-      <a href="" class="text-decoration-none">English</a>
-      <a href="" class="text-decoration-none">Deutsch</a>
-      <a href="" class="text-decoration-none">Español</a>
-      <a href="" class="text-decoration-none">Français</a>
-      <a href="" class="text-decoration-none">Bahasa Indonesia</a>
-      <a href="" class="text-decoration-none">Italiano</a>
-      <a href="" class="text-decoration-none">日本語</a>
-      <a href="" class="text-decoration-none">한국어</a>
-      <a href="" class="text-decoration-none">Nederlands</a>
-      <a href="" class="text-decoration-none">Polski</a>
-      <a href="" class="text-decoration-none">Português</a>
-      <a href="" class="text-decoration-none">Română</a>
-      <a href="" class="text-decoration-none">Русский</a>
-      <a href="" class="text-decoration-none">ภาษาไทย</a>
-      <a href="" class="text-decoration-none">Türkçe</a>
-      <a href="" class="text-decoration-none">中文(简体)</a>
-      <a href="" class="text-decoration-none">中文(繁體)</a>
-    </div>
-  </button>
-  <div class="partner d:flex flex-column">
-    <a href="" class="d:block text-decoration-none">Become and instructor</a>
-    <p>Top instructors from around the world teach millions of students on Udemy. We provide the tools and skills to
-      teach what you love.</p>
-    <button class="button-1">Start teaching today</button>
-  </div>
-  <div class="mb-5"></div>
+  </section>
+  
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="./sass/vendors/jquery-3.3.1.slim.min.js"></script>
@@ -1003,7 +1133,7 @@
   <script src='./sass/vendors/owl.carousel.min.js'></script>
   <script>
     //START OWL CAROUSEL
-    $('.owl-carousel').owlCarousel({
+    $('.owl-one').owlCarousel({
         loop: true,
         margin: 10,
         nav: true,
@@ -1012,18 +1142,39 @@
           0: {
             items: 1
           },
-          600: {
-            items: 3
+          500: {
+            items: 2
           },
-          1200: {
+          768: {
             items: 3
           }
         }
       })
 
-    
 
 //END OWL CAROUSEL
+  </script>
+  <script>
+    $('.owl-two').owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        dots: false,
+        responsive: {
+          0: {
+            items: 1
+          },
+          480: {
+            items: 2
+          },
+          768: {
+            items: 3
+          },
+          1200: {
+            items: 4
+          }
+        }
+      })
   </script>
 </body>
 
