--- a/components.html
+++ b/components.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+      <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="./sass/vendors/bootstrap.min.css">
+  <!-- FONT AWESOME LIBRARY -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
+    integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- GOOGLE FONT ROBOTO -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <!-- OWL CAROUSEL -->
+  <link rel="stylesheet" href="./sass/vendors/owl.theme.default.min.css">
+  <link rel="stylesheet" href="./sass/vendors/owl.carousel.min.css">
+  <!-- LINK MAIN CSS -->
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <div></div>
@@ -91,5 +104,9 @@
     <button class="button-1">Start teaching today</button>
   </div>
   <div class="mb-5"></div>
+  <script src="./sass/vendors/jquery-3.3.1.slim.min.js"></script>
+  <script src="./sass/vendors/popper.min.js"></script>
+  <script src="./sass/vendors/bootstrap.min.js"></script>
+  <script src='./sass/vendors/owl.carousel.min.js'></script>
 </body>
 </html>
